# sweepreader

./: .env.example  .gitignore  DEPLOYMENT.md  FUTURE.md  PLAN.md  README.md  SPEC.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  email.yml
data/: state.json
data/classifications/: 2026-06.jsonl  2026-07.jsonl
data/items/: 2025-12.jsonl  2026-01.jsonl  2026-02.jsonl  2026-03.jsonl  2026-04.jsonl  2026-05.jsonl  2026-06.jsonl  2026-07.jsonl
docs/: index.html
src/sweepreader/: __main__.py  config.py  score.py  tags.py
src/sweepreader/classify/: __init__.py  classifier.py
src/sweepreader/cli/: __init__.py  backtest.py  email_cmd.py  run.py  seed.py  serve.py
src/sweepreader/ingest/: __init__.py  base.py  box.py  cboe.py  cluster.py  email_ingestor.py  federal_register.py  html_text.py  http_cache.py  iex.py  miax.py  nyse.py  opra.py  pdf_text.py  rss.py
src/sweepreader/render/: __init__.py  email_render.py  page.py
src/sweepreader/store/: __init__.py  feedback.py  models.py  store.py
templates/: email.html  page.html
tests/: test_box.py  test_cboe.py  test_classifier.py  test_cluster.py  test_config.py  test_email_ingestor.py  test_email_render.py  test_http_cache.py  test_iex.py  test_ingest.py  test_miax.py  test_nyse.py  test_opra.py  test_render.py  test_score.py  test_seed.py  test_store.py  test_tags.py
tests/fixtures/: cboe_rss.xml  federal_register_response.json  miax_alert.eml
